--- a/index.html
+++ b/index.html
@@ -38,12 +38,10 @@
             <div class="container">
                 <div class="hero-content hero__hero-content">
                     <div class="hero-content__box">
-                        <div class="hero-content__text">
-                            <h1 class="hero-content__title">Start spending the smart way</h1>
-                            <p class="hero-content__sup-text">Take Control of Your Finances Anytime, Anywhere with
-                                Kobodrop.
-                                Discover the Smart Way to Use Your Money!</p>
-                        </div>
+                        <h1 class="hero-content__title">Start spending the smart way</h1>
+                        <p class="hero-content__sup-text">Take Control of Your Finances Anytime, Anywhere with
+                            Kobodrop.
+                            Discover the Smart Way to Use Your Money!</p>
                         <ul class="links-list hero-content__links-list">
                             <li class="links-list__item">
                                 <a href="https://www.apple.com/app-store/" class="links-list__link">
@@ -75,11 +73,9 @@
         </section>
         <section class="money">
             <div class="money__container">
-                <div class="money__text">
-                    <h3 class="money__heading">Make every penny count</h3>
-                    <p class="money__desc">Spend smarter, lower your bills, get cashback on everything you buy, and
-                        unlock credit to grow your business.</p>
-                </div>
+                <h3 class="money__heading">Make every penny count</h3>
+                <p class="money__desc">Spend smarter, lower your bills, get cashback on everything you buy, and
+                    unlock credit to grow your business.</p>
                 <div class="simple-security money__simple-security">
                     <div class="simple simple-security__simple">
                         <div class="simple__text">
@@ -88,7 +84,7 @@
                                 paying for electricity or internet, Kobodrop gets it done within seconds.</p>
 
                         </div>
-                        <img src="./images/money/phone-img.png" alt="iPhone12">
+                        <img class="simple__phone-img" src="./images/money/phone-img.png" alt="iPhone12">
                         <div class="simple__card-images">
                             <img src="./images/money/notification-img.png" alt="Master Card notification">
                             <img src="./images/money/notification-img2.png" alt="MTN notification">
@@ -122,39 +118,37 @@
                             <p class="exchange__desc">Transfers, payments all work on Kobodrop. Get your alert message
                                 immediately after a completed transaction. </p>
                         </div>
-                        <div class="banks-grid reduction__banks-grid">
-                            <div class="banks-grid__item"></div>
-                            <img src="./images/money/visa.png" alt="">
-                            <div class="banks-grid__item"></div>
-                            <div class="banks-grid__item"></div>
-                            <img src="./images/money/alat.png" alt="">
-                            <div class="banks-grid__item"></div>
-                            <div class="banks-grid__item"></div>
-                            <img src="./images/money/paypal.png" alt="">
-                            <div class="banks-grid__item"></div>
-                            <div class="banks-grid__item"></div>
-                            <img src="./images/money/gtbank.png" alt="">
-                            <div class="banks-grid__item"></div>
-                            <div class="banks-grid__item"></div>
-                            <div class="banks-grid__item"></div>
-                            <div class="banks-grid__item"></div>
-                            <div class="banks-grid__item"></div>
-                            <div class="banks-grid__item"></div>
-                            <div class="banks-grid__item"></div>
-                            <img src="./images/money/stripe.png" alt="">
-                            <div class="banks-grid__item"></div>
-                        </div>
+                        <ul class="banks-grid reduction__banks-grid">
+                            <li class="banks-grid__item"></li>
+                            <li class="banks-grid__item"><img src="./images/money/visa.png" width="74" height="74" alt=""></li>
+                            <li class="banks-grid__item"></li>
+                            <li class="banks-grid__item"></li>
+                            <li class="banks-grid__item"><img src="./images/money/alat.png" width="74" height="74" alt=""></li>
+                            <li class="banks-grid__item"></li>
+                            <li class="banks-grid__item"></li>
+                            <li class="banks-grid__item"><img src="./images/money/paypal.png" width="74" height="74" alt=""></li>
+                            <li class="banks-grid__item"></li>
+                            <li class="banks-grid__item"></li>
+                            <li class="banks-grid__item"><img src="./images/money/gtbank.png" width="74" height="74" alt=""></li>
+                            <li class="banks-grid__item"></li>
+                            <li class="banks-grid__item"></li>
+                            <li class="banks-grid__item"></li>
+                            <li class="banks-grid__item"></li>
+                            <li class="banks-grid__item"></li>
+                            <li class="banks-grid__item"></li>
+                            <li class="banks-grid__item"></li>
+                            <li class="banks-grid__item"><img src="./images/money/stripe.png" width="74" height="74" alt=""></li>
+                            <li class="banks-grid__item"></li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </section>
         <section class="features">
             <div class="container">
-                <div class="features__text">
-                    <h3 class="features__heading">Transact seamlessly with...</h3>
-                    <p class="features__desc">Connect your other accounts to Kobodrop seamlessly. Kobodrop supports 200+
-                        integrations with other payment platforms like stripe, paypal, payoneer and others</p>
-                </div>
+                <h3 class="features__heading">Transact seamlessly with...</h3>
+                <p class="features__desc">Connect your other accounts to Kobodrop seamlessly. Kobodrop supports 200+
+                    integrations with other payment platforms like stripe, paypal, payoneer and others</p>
                 <div class="features-grid features__features-grid">
                     <svg width="116" height="80" class="features-grid__icon">
                         <use href="./images/icons.svg#icon-klarna"></use>
@@ -244,11 +238,11 @@
                             <h4 class="suptext-arrows__text">Nigeria</h4>
                             <div class="arrows suptext-arrows__arrows">
                                 <button class="arrows__button"><svg width="20" height="20" class="arrows__icon">
-                                    <use href="./images/icons.svg#icon-arrow-left"></use>
-                                </svg></button>
+                                        <use href="./images/icons.svg#icon-arrow-left"></use>
+                                    </svg></button>
                                 <button class="arrows__button"><svg width="20" height="20" class="arrows__icon">
-                                    <use href="./images/icons.svg#icon-arrow-right"></use>
-                                </svg></button>
+                                        <use href="./images/icons.svg#icon-arrow-right"></use>
+                                    </svg></button>
                             </div>
                         </div>
                     </div>
@@ -257,7 +251,7 @@
         </section>
         <footer>
             <div class="container">
-                
+
             </div>
         </footer>
     </main>
