--- a/index.html
+++ b/index.html
@@ -120,16 +120,20 @@
                         </div>
                         <ul class="banks-grid reduction__banks-grid">
                             <li class="banks-grid__item"></li>
-                            <li class="banks-grid__item"><img src="./images/money/visa.png" width="74" height="74" alt=""></li>
+                            <li class="banks-grid__item"><img src="./images/money/visa.png" width="74" height="74"
+                                    alt=""></li>
                             <li class="banks-grid__item"></li>
                             <li class="banks-grid__item"></li>
-                            <li class="banks-grid__item"><img src="./images/money/alat.png" width="74" height="74" alt=""></li>
+                            <li class="banks-grid__item"><img src="./images/money/alat.png" width="74" height="74"
+                                    alt=""></li>
                             <li class="banks-grid__item"></li>
                             <li class="banks-grid__item"></li>
-                            <li class="banks-grid__item"><img src="./images/money/paypal.png" width="74" height="74" alt=""></li>
+                            <li class="banks-grid__item"><img src="./images/money/paypal.png" width="74" height="74"
+                                    alt=""></li>
                             <li class="banks-grid__item"></li>
                             <li class="banks-grid__item"></li>
-                            <li class="banks-grid__item"><img src="./images/money/gtbank.png" width="74" height="74" alt=""></li>
+                            <li class="banks-grid__item"><img src="./images/money/gtbank.png" width="74" height="74"
+                                    alt=""></li>
                             <li class="banks-grid__item"></li>
                             <li class="banks-grid__item"></li>
                             <li class="banks-grid__item"></li>
@@ -137,7 +141,8 @@
                             <li class="banks-grid__item"></li>
                             <li class="banks-grid__item"></li>
                             <li class="banks-grid__item"></li>
-                            <li class="banks-grid__item"><img src="./images/money/stripe.png" width="74" height="74" alt=""></li>
+                            <li class="banks-grid__item"><img src="./images/money/stripe.png" width="74" height="74"
+                                    alt=""></li>
                             <li class="banks-grid__item"></li>
                         </ul>
                     </div>
@@ -249,9 +254,88 @@
                 </div>
             </div>
         </section>
-        <footer>
-            <div class="container">
-
+        <footer class="footer">
+            <div class="container footer__container">
+                <div class="footer-content footer__footer-content">
+                    <div class="footer-content__logo-box">
+                        <div class="footer-content__logo">
+                            <svg class="footer-content__logo-icon" width="29" height="23">
+                                <use href="images/icons.svg#icon-logo-negative"></use>
+                            </svg>
+                            <span class="footer-content__logo-text">Kobodrop</span>
+                        </div>
+                        <p class="footer-content__logo-desc">Start spending the smart way</p>
+                    </div>
+                    <div class="footer-product footer-content__footer-product">
+                        <h5 class="footer-product__heading">Product</h5>
+                        <ul class="footers-product__list">
+                            <li class="footer-product__item"><a href="#" class="footer-product__link">Overview</a></li>
+                            <li class="footer-product__item"><a href="#" class="footer-product__link">Features</a></li>
+                            <li class="footer-product__item"><a href="#" class="footer-product__link">Solutions</a></li>
+                            <li class="footer-product__item"><a href="#" class="footer-product__link">Contact</a></li>
+                            <li class="footer-product__item"><a href="#" class="footer-product__link">Releases</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-resources footer-content__footer-resources">
+                        <h5 class="footer-resources__heading">Resources</h5>
+                        <ul class="footers-resources__list">
+                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Blog</a></li>
+                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Newsletter</a>
+                            </li>
+                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Events</a>
+                            </li>
+                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Help
+                                    centre</a></li>
+                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Support</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="get-app footer-content__get-app">
+                        <h4 class="get-app__heading">Get the app</h4>
+                        <ul class="get-app__list">
+                            <li class="get-app__item">
+                                <a href="https://www.apple.com/app-store/">
+                                    <svg class="get-app__icon" width="135" height="40">
+                                        <use href="./images/icons.svg#icon-footer-appstore-badge"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="get-app__item">
+                                <a href="https://play.google.com/store/games?hl=uk&gl=US">
+                                    <svg class="get-app__icon" width="135" height="40">
+                                        <use href="./images/icons.svg#icon-footer-googleplay-badge"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-rights footer__footer-rights">
+                    <div class="footer-rights__text">© 2023 Kobodrop. All rights reserved.</div>
+                    <ul class="footer-rights__list">
+                        <li class="footer-rights__item">
+                            <a href="https://twitter.com/" class="footer-rights__link">
+                                <svg width="24" height="24" class="footer-rights__icon">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-rights__item">
+                            <a href="https://www.linkedin.com/" class="footer-rights__link">
+                                <svg width="24" height="24" class="footer-rights__icon">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-rights__item">
+                            <a href="https://www.facebook.com/" class="footer-rights__link">
+                                <svg width="24" height="24" class="footer-rights__icon">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </footer>
     </main>
