Links to sections

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </div>
             <nav class="header-nav header__header-nav">
                 <ul class="header-nav-list header-nav__header-nav-list">
-                    <li class="header-nav-list__item"><a href="#" class="header-nav-list__item-link">Learn</a></li>
-                    <li class="header-nav-list__item"><a href="#" class="header-nav-list__item-link">Resources</a></li>
-                    <li class="header-nav-list__item"><a href="#" class="header-nav-list__item-link">FAQs</a></li>
+                    <li class="header-nav-list__item"><a href="#learn" class="header-nav-list__item-link">Learn</a></li>
+                    <li class="header-nav-list__item"><a href="#integrations" class="header-nav-list__item-link">Partners</a></li>
+                    <li class="header-nav-list__item"><a href="#join-us" class="header-nav-list__item-link">Join Us</a></li>
                 </ul>
             </nav>
             <button class="header__btn">Install Kobodrop</button>
@@ -72,10 +72,11 @@
                 </div>
             </div>
         </section>
-        <section class="money">
+        <section id="learn" class="money">
             <div class="money__container">
                 <h3 class="money__heading wow fadeInDown">Make every penny count</h3>
-                <p class="money__desc wow fadeInDown">Spend smarter, lower your bills, get cashback on everything you buy, and
+                <p class="money__desc wow fadeInDown">Spend smarter, lower your bills, get cashback on everything you
+                    buy, and
                     unlock credit to grow your business.</p>
                 <div class="simple-security money__simple-security">
                     <div class="simple simple-security__simple wow fadeInLeftBig">
@@ -150,7 +151,7 @@
                 </div>
             </div>
         </section>
-        <section class="features wow fadeInUpBig">
+        <section id="integrations" class="features wow fadeInUpBig">
             <div class="container">
                 <h3 class="features__heading">Transact seamlessly with...</h3>
                 <p class="features__desc">Connect your other accounts to Kobodrop seamlessly. Kobodrop supports 200+
@@ -174,14 +175,14 @@
                     <svg width="116" height="80">
                         <use href="./images/icons.svg#icon-payoneer"></use>
                     </svg>
-                    <img src="images/money/partners/visa.png" width="116" height="80" alt="">
+                    <img src="./images/money/partners/visa.png" width="116" height="80" alt="">
                     <img src="./images/money/partners/9mobile.png" width="116" height="80" alt="">
                     <img src="./images/money/partners/kejs.png" width="116" height="80" alt="">
                     <img src="./images/money/partners/dstv.png" width="116" height="80" alt="">
                 </div>
             </div>
         </section>
-        <section class="join-us">
+        <section id="join-us" class="join-us">
             <div class="container join-us__container">
                 <div class="join-us__text">
                     <h2 class="join-us__title">Join other thousands of people growing with Kobodrop</h2>
@@ -286,7 +287,7 @@
                             <li class="footer-resources__item"><a href="#" class="footer-resources__link">Events</a>
                             </li>
                             <li class="footer-resources__item"><a href="#" class="footer-resources__link">Help
-                                    centre</a></li>
+                                    center</a></li>
                             <li class="footer-resources__item"><a href="#" class="footer-resources__link">Support</a>
                             </li>
                         </ul>
