--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="payment money__payment wow bounceInUp">
-                    <div class="reduction payment__reduction">
+                <div class="payment money__payment">
+                    <div class="reduction payment__reduction wow fadeInLeftBig">
                         <svg class="reduction__icon" width="48" height="48">
                             <use href="./images/icons.svg#icon-coins">
                         </svg>
@@ -114,7 +114,7 @@
                                 hidden fees</p>
                         </div>
                     </div>
-                    <div class="exchange payment__exchange">
+                    <div class="exchange payment__exchange wow fadeInRightBig">
                         <div class="exchange__text">
                             <h3 class="exchange__heading">Send, recieve and Exchange money</h3>
                             <p class="exchange__desc">Transfers, payments all work on Kobodrop. Get your alert message
@@ -256,91 +256,91 @@
                 </div>
             </div>
         </section>
-        <footer class="footer">
-            <div class="container footer__container">
-                <div class="footer-content footer__footer-content">
-                    <div class="footer-content__logo-box">
-                        <div class="footer-content__logo">
-                            <svg class="footer-content__logo-icon" width="29" height="23">
-                                <use href="images/icons.svg#icon-logo-negative"></use>
-                            </svg>
-                            <span class="footer-content__logo-text">Kobodrop</span>
-                        </div>
-                        <p class="footer-content__logo-desc">Start spending the smart way</p>
+    </main>
+    <footer class="footer">
+        <div class="container footer__container">
+            <div class="footer-content footer__footer-content">
+                <div class="footer-content__logo-box">
+                    <div class="footer-content__logo">
+                        <svg class="footer-content__logo-icon" width="29" height="23">
+                            <use href="images/icons.svg#icon-logo-negative"></use>
+                        </svg>
+                        <span class="footer-content__logo-text">Kobodrop</span>
                     </div>
-                    <div class="footer-product footer-content__footer-product">
-                        <h5 class="footer-product__heading">Product</h5>
-                        <ul class="footers-product__list">
-                            <li class="footer-product__item"><a href="#" class="footer-product__link">Overview</a></li>
-                            <li class="footer-product__item"><a href="#" class="footer-product__link">Features</a></li>
-                            <li class="footer-product__item"><a href="#" class="footer-product__link">Solutions</a></li>
-                            <li class="footer-product__item"><a href="#" class="footer-product__link">Contact</a></li>
-                            <li class="footer-product__item"><a href="#" class="footer-product__link">Releases</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-resources footer-content__footer-resources">
-                        <h5 class="footer-resources__heading">Resources</h5>
-                        <ul class="footers-resources__list">
-                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Blog</a></li>
-                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Newsletter</a>
-                            </li>
-                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Events</a>
-                            </li>
-                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Help
-                                    center</a></li>
-                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Support</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="get-app footer-content__get-app">
-                        <h4 class="get-app__heading">Get the app</h4>
-                        <ul class="get-app__list">
-                            <li class="get-app__item">
-                                <a href="https://www.apple.com/app-store/">
-                                    <svg class="get-app__icon" width="135" height="40">
-                                        <use href="./images/icons.svg#icon-footer-appstore-badge"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="get-app__item">
-                                <a href="https://play.google.com/store/games?hl=uk&gl=US">
-                                    <svg class="get-app__icon" width="135" height="40">
-                                        <use href="./images/icons.svg#icon-footer-googleplay-badge"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+                    <p class="footer-content__logo-desc">Start spending the smart way</p>
                 </div>
-                <div class="footer-rights footer__footer-rights">
-                    <div class="footer-rights__text">© 2023 Kobodrop. All rights reserved.</div>
-                    <ul class="footer-rights__list">
-                        <li class="footer-rights__item">
-                            <a href="https://twitter.com/" class="footer-rights__link">
-                                <svg width="24" height="24" class="footer-rights__icon">
-                                    <use href="./images/icons.svg#icon-twitter"></use>
+                <div class="footer-product footer-content__footer-product">
+                    <h5 class="footer-product__heading">Product</h5>
+                    <ul class="footers-product__list">
+                        <li class="footer-product__item"><a href="#" class="footer-product__link">Overview</a></li>
+                        <li class="footer-product__item"><a href="#" class="footer-product__link">Features</a></li>
+                        <li class="footer-product__item"><a href="#" class="footer-product__link">Solutions</a></li>
+                        <li class="footer-product__item"><a href="#" class="footer-product__link">Contact</a></li>
+                        <li class="footer-product__item"><a href="#" class="footer-product__link">Releases</a></li>
+                    </ul>
+                </div>
+                <div class="footer-resources footer-content__footer-resources">
+                    <h5 class="footer-resources__heading">Resources</h5>
+                    <ul class="footers-resources__list">
+                        <li class="footer-resources__item"><a href="#" class="footer-resources__link">Blog</a></li>
+                        <li class="footer-resources__item"><a href="#" class="footer-resources__link">Newsletter</a>
+                        </li>
+                        <li class="footer-resources__item"><a href="#" class="footer-resources__link">Events</a>
+                        </li>
+                        <li class="footer-resources__item"><a href="#" class="footer-resources__link">Help
+                                center</a></li>
+                        <li class="footer-resources__item"><a href="#" class="footer-resources__link">Support</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="get-app footer-content__get-app">
+                    <h4 class="get-app__heading">Get the app</h4>
+                    <ul class="get-app__list">
+                        <li class="get-app__item">
+                            <a href="https://www.apple.com/app-store/">
+                                <svg class="get-app__icon" width="135" height="40">
+                                    <use href="./images/icons.svg#icon-footer-appstore-badge"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="footer-rights__item">
-                            <a href="https://www.linkedin.com/" class="footer-rights__link">
-                                <svg width="24" height="24" class="footer-rights__icon">
-                                    <use href="./images/icons.svg#icon-linkedin"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="footer-rights__item">
-                            <a href="https://www.facebook.com/" class="footer-rights__link">
-                                <svg width="24" height="24" class="footer-rights__icon">
-                                    <use href="./images/icons.svg#icon-facebook"></use>
+                        <li class="get-app__item">
+                            <a href="https://play.google.com/store/games?hl=uk&gl=US">
+                                <svg class="get-app__icon" width="135" height="40">
+                                    <use href="./images/icons.svg#icon-footer-googleplay-badge"></use>
                                 </svg>
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
-        </footer>
-    </main>
+            <div class="footer-rights footer__footer-rights">
+                <div class="footer-rights__text">© 2023 Kobodrop. All rights reserved.</div>
+                <ul class="footer-rights__list">
+                    <li class="footer-rights__item">
+                        <a href="https://twitter.com/" class="footer-rights__link">
+                            <svg width="24" height="24" class="footer-rights__icon">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-rights__item">
+                        <a href="https://www.linkedin.com/" class="footer-rights__link">
+                            <svg width="24" height="24" class="footer-rights__icon">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-rights__item">
+                        <a href="https://www.facebook.com/" class="footer-rights__link">
+                            <svg width="24" height="24" class="footer-rights__icon">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     <script src="./js/wow.js/wow.min.js"></script>
     <script>
         new WOW().init();
